fixing blurry image

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -302,7 +302,7 @@ body {
   .item--current > a, 
   .item--current .dropbtn, {
       opacity: 0.5;
-      border-bottom:1px solid black;
+      border-bottom:2px solid #333333;
   }
 
 .item--current .dropdown .dropdown-content {
